// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Charts/Bar List/Labels LabelBottom smoke-test 1`] = `
<section role="list"
         id="ref-2"
         style="width: 350px;"
>
  <div role="listitem"
       class="_item_18e6r_1 _valueEnd_18e6r_9 _labelBottom_18e6r_15"
  >
    <label title="Phishing Attempts"
           class="_label_18e6r_8"
    >
      Phishing Attempts
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Phishing Attempts: 100"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 99.955%;"
      >
      </div>
    </div>
    <label title="100"
           class="_valueLabel_18e6r_71"
    >
      <small>
        100
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueEnd_18e6r_9 _labelBottom_18e6r_15"
  >
    <label title="Vulnerability Patch"
           class="_label_18e6r_8"
    >
      Vulnerability Patch
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Vulnerability Patch: 50"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 49.9775%;"
      >
      </div>
    </div>
    <label title="50"
           class="_valueLabel_18e6r_71"
    >
      <small>
        50
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueEnd_18e6r_9 _labelBottom_18e6r_15"
  >
    <label title="Critical Failure"
           class="_label_18e6r_8"
    >
      Critical Failure
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Critical Failure: 25"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 24.9888%;"
      >
      </div>
    </div>
    <label title="25"
           class="_valueLabel_18e6r_71"
    >
      <small>
        25
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueEnd_18e6r_9 _labelBottom_18e6r_15"
  >
    <label title="Physical Intrusion"
           class="_label_18e6r_8"
    >
      Physical Intrusion
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Physical Intrusion: 5"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 4.99775%;"
      >
      </div>
    </div>
    <label title="5"
           class="_valueLabel_18e6r_71"
    >
      <small>
        5
      </small>
    </label>
  </div>
</section>
`;

exports[`Charts/Bar List/Labels LabelEnd smoke-test 1`] = `
<section role="list"
         id="ref-3"
         style="width: 350px;"
>
  <div role="listitem"
       class="_item_18e6r_1 _valueStart_18e6r_36 _labelEnd_18e6r_35"
  >
    <label title="Phishing Attempts"
           class="_label_18e6r_8"
    >
      Phishing Attempts
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Phishing Attempts: 100"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 99.9618%;"
      >
      </div>
    </div>
    <label title="100"
           class="_valueLabel_18e6r_71"
    >
      <small>
        100
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueStart_18e6r_36 _labelEnd_18e6r_35"
  >
    <label title="Vulnerability Patch"
           class="_label_18e6r_8"
    >
      Vulnerability Patch
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Vulnerability Patch: 50"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 49.9809%;"
      >
      </div>
    </div>
    <label title="50"
           class="_valueLabel_18e6r_71"
    >
      <small>
        50
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueStart_18e6r_36 _labelEnd_18e6r_35"
  >
    <label title="Critical Failure"
           class="_label_18e6r_8"
    >
      Critical Failure
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Critical Failure: 25"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 24.9905%;"
      >
      </div>
    </div>
    <label title="25"
           class="_valueLabel_18e6r_71"
    >
      <small>
        25
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueStart_18e6r_36 _labelEnd_18e6r_35"
  >
    <label title="Physical Intrusion"
           class="_label_18e6r_8"
    >
      Physical Intrusion
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Physical Intrusion: 5"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 4.99809%;"
      >
      </div>
    </div>
    <label title="5"
           class="_valueLabel_18e6r_71"
    >
      <small>
        5
      </small>
    </label>
  </div>
</section>
`;

exports[`Charts/Bar List/Labels LabelNone smoke-test 1`] = `
<section role="list"
         id="ref-5"
         style="width: 350px;"
>
  <div role="listitem"
       class="_item_18e6r_1 _valueEnd_18e6r_9 _labelNone_18e6r_24"
  >
    <label title="Phishing Attempts"
           class="_label_18e6r_8"
    >
      Phishing Attempts
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Phishing Attempts: 100"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 99.9546%;"
      >
      </div>
    </div>
    <label title="100"
           class="_valueLabel_18e6r_71"
    >
      <small>
        100
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueEnd_18e6r_9 _labelNone_18e6r_24"
  >
    <label title="Vulnerability Patch"
           class="_label_18e6r_8"
    >
      Vulnerability Patch
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Vulnerability Patch: 50"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 49.9773%;"
      >
      </div>
    </div>
    <label title="50"
           class="_valueLabel_18e6r_71"
    >
      <small>
        50
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueEnd_18e6r_9 _labelNone_18e6r_24"
  >
    <label title="Critical Failure"
           class="_label_18e6r_8"
    >
      Critical Failure
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Critical Failure: 25"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 24.9886%;"
      >
      </div>
    </div>
    <label title="25"
           class="_valueLabel_18e6r_71"
    >
      <small>
        25
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueEnd_18e6r_9 _labelNone_18e6r_24"
  >
    <label title="Physical Intrusion"
           class="_label_18e6r_8"
    >
      Physical Intrusion
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Physical Intrusion: 5"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 4.99773%;"
      >
      </div>
    </div>
    <label title="5"
           class="_valueLabel_18e6r_71"
    >
      <small>
        5
      </small>
    </label>
  </div>
</section>
`;

exports[`Charts/Bar List/Labels LabelStart smoke-test 1`] = `
<section role="list"
         id="ref-1"
         style="width: 350px;"
>
  <div role="listitem"
       class="_item_18e6r_1 _valueEnd_18e6r_9 _labelStart_18e6r_8"
  >
    <label title="Phishing Attempts"
           class="_label_18e6r_8"
    >
      Phishing Attempts
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Phishing Attempts: 100"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 100%;"
      >
      </div>
    </div>
    <label title="100"
           class="_valueLabel_18e6r_71"
    >
      <small>
        100
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueEnd_18e6r_9 _labelStart_18e6r_8"
  >
    <label title="Vulnerability Patch"
           class="_label_18e6r_8"
    >
      Vulnerability Patch
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Vulnerability Patch: 50"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 50%;"
      >
      </div>
    </div>
    <label title="50"
           class="_valueLabel_18e6r_71"
    >
      <small>
        50
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueEnd_18e6r_9 _labelStart_18e6r_8"
  >
    <label title="Critical Failure"
           class="_label_18e6r_8"
    >
      Critical Failure
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Critical Failure: 25"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 25%;"
      >
      </div>
    </div>
    <label title="25"
           class="_valueLabel_18e6r_71"
    >
      <small>
        25
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueEnd_18e6r_9 _labelStart_18e6r_8"
  >
    <label title="Physical Intrusion"
           class="_label_18e6r_8"
    >
      Physical Intrusion
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Physical Intrusion: 5"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 5%;"
      >
      </div>
    </div>
    <label title="5"
           class="_valueLabel_18e6r_71"
    >
      <small>
        5
      </small>
    </label>
  </div>
</section>
`;

exports[`Charts/Bar List/Labels LabelTop smoke-test 1`] = `
<section role="list"
         id="ref-4"
         style="width: 350px;"
>
  <div role="listitem"
       class="_item_18e6r_1 _valueNone_18e6r_65 _labelTop_18e6r_42"
  >
    <label title="Phishing Attempts"
           class="_label_18e6r_8"
    >
      Phishing Attempts
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Phishing Attempts: 100"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 99.9503%;"
      >
      </div>
    </div>
    <label title="100"
           class="_valueLabel_18e6r_71"
    >
      <small>
        100
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueNone_18e6r_65 _labelTop_18e6r_42"
  >
    <label title="Vulnerability Patch"
           class="_label_18e6r_8"
    >
      Vulnerability Patch
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Vulnerability Patch: 50"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 49.9751%;"
      >
      </div>
    </div>
    <label title="50"
           class="_valueLabel_18e6r_71"
    >
      <small>
        50
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueNone_18e6r_65 _labelTop_18e6r_42"
  >
    <label title="Critical Failure"
           class="_label_18e6r_8"
    >
      Critical Failure
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Critical Failure: 25"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 24.9876%;"
      >
      </div>
    </div>
    <label title="25"
           class="_valueLabel_18e6r_71"
    >
      <small>
        25
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueNone_18e6r_65 _labelTop_18e6r_42"
  >
    <label title="Physical Intrusion"
           class="_label_18e6r_8"
    >
      Physical Intrusion
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Physical Intrusion: 5"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 4.99751%;"
      >
      </div>
    </div>
    <label title="5"
           class="_valueLabel_18e6r_71"
    >
      <small>
        5
      </small>
    </label>
  </div>
</section>
`;

exports[`Charts/Bar List/Labels LongValueEnd smoke-test 1`] = `
<section role="list"
         id="ref-11"
         style="width: 350px;"
>
  <div role="listitem"
       class="_item_18e6r_1 _valueEnd_18e6r_9 _labelTop_18e6r_42"
  >
    <label title="Phishing Attempts"
           class="_label_18e6r_8"
    >
      Phishing Attempts
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Phishing Attempts: 100"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 99.9546%;"
      >
      </div>
    </div>
    <label title="5,000,000"
           class="_valueLabel_18e6r_71"
    >
      <small>
        5,000,000
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueEnd_18e6r_9 _labelTop_18e6r_42"
  >
    <label title="Physical Intrusion"
           class="_label_18e6r_8"
    >
      Physical Intrusion
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Physical Intrusion: 10"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 9.99546%;"
      >
      </div>
    </div>
    <label title="500,000"
           class="_valueLabel_18e6r_71"
    >
      <small>
        500,000
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueEnd_18e6r_9 _labelTop_18e6r_42"
  >
    <label title="Critical Failure"
           class="_label_18e6r_8"
    >
      Critical Failure
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Critical Failure: 1"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 0.99955%;"
      >
      </div>
    </div>
    <label title="50,000"
           class="_valueLabel_18e6r_71"
    >
      <small>
        50,000
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueEnd_18e6r_9 _labelTop_18e6r_42"
  >
    <label title="Vulnerability Patch"
           class="_label_18e6r_8"
    >
      Vulnerability Patch
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Vulnerability Patch: No value"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 0%;"
      >
      </div>
    </div>
    <label title="5,000"
           class="_valueLabel_18e6r_71"
    >
      <small>
        5,000
      </small>
    </label>
  </div>
</section>
`;

exports[`Charts/Bar List/Labels LongValueStart smoke-test 1`] = `
<section role="list"
         id="ref-10"
         style="width: 350px;"
>
  <div role="listitem"
       class="_item_18e6r_1 _valueStart_18e6r_36 _labelTop_18e6r_42"
  >
    <label title="Phishing Attempts"
           class="_label_18e6r_8"
    >
      Phishing Attempts
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Phishing Attempts: 100"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 99.9503%;"
      >
      </div>
    </div>
    <label title="5,000,000"
           class="_valueLabel_18e6r_71"
    >
      <small>
        5,000,000
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueStart_18e6r_36 _labelTop_18e6r_42"
  >
    <label title="Physical Intrusion"
           class="_label_18e6r_8"
    >
      Physical Intrusion
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Physical Intrusion: 10"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 9.99503%;"
      >
      </div>
    </div>
    <label title="500,000"
           class="_valueLabel_18e6r_71"
    >
      <small>
        500,000
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueStart_18e6r_36 _labelTop_18e6r_42"
  >
    <label title="Critical Failure"
           class="_label_18e6r_8"
    >
      Critical Failure
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Critical Failure: 1"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 0.9995%;"
      >
      </div>
    </div>
    <label title="50,000"
           class="_valueLabel_18e6r_71"
    >
      <small>
        50,000
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueStart_18e6r_36 _labelTop_18e6r_42"
  >
    <label title="Vulnerability Patch"
           class="_label_18e6r_8"
    >
      Vulnerability Patch
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Vulnerability Patch: No value"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 0%;"
      >
      </div>
    </div>
    <label title="5,000"
           class="_valueLabel_18e6r_71"
    >
      <small>
        5,000
      </small>
    </label>
  </div>
</section>
`;

exports[`Charts/Bar List/Labels ValueBottom smoke-test 1`] = `
<section role="list"
         id="ref-6"
         style="width: 350px;"
>
  <div role="listitem"
       class="_item_18e6r_1 _valueBottom_18e6r_57 _labelTop_18e6r_42"
  >
    <label title="Phishing Attempts"
           class="_label_18e6r_8"
    >
      Phishing Attempts
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Phishing Attempts: 100"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 99.9525%;"
      >
      </div>
    </div>
    <label title="100"
           class="_valueLabel_18e6r_71"
    >
      <small>
        100
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueBottom_18e6r_57 _labelTop_18e6r_42"
  >
    <label title="Vulnerability Patch"
           class="_label_18e6r_8"
    >
      Vulnerability Patch
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Vulnerability Patch: 50"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 49.9763%;"
      >
      </div>
    </div>
    <label title="50"
           class="_valueLabel_18e6r_71"
    >
      <small>
        50
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueBottom_18e6r_57 _labelTop_18e6r_42"
  >
    <label title="Critical Failure"
           class="_label_18e6r_8"
    >
      Critical Failure
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Critical Failure: 25"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 24.9881%;"
      >
      </div>
    </div>
    <label title="25"
           class="_valueLabel_18e6r_71"
    >
      <small>
        25
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueBottom_18e6r_57 _labelTop_18e6r_42"
  >
    <label title="Physical Intrusion"
           class="_label_18e6r_8"
    >
      Physical Intrusion
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Physical Intrusion: 5"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 4.9976%;"
      >
      </div>
    </div>
    <label title="5"
           class="_valueLabel_18e6r_71"
    >
      <small>
        5
      </small>
    </label>
  </div>
</section>
`;

exports[`Charts/Bar List/Labels ValueEnd smoke-test 1`] = `
<section role="list"
         id="ref-7"
         style="width: 350px;"
>
  <div role="listitem"
       class="_item_18e6r_1 _valueEnd_18e6r_9 _labelTop_18e6r_42"
  >
    <label title="Phishing Attempts"
           class="_label_18e6r_8"
    >
      Phishing Attempts
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Phishing Attempts: 100"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 99.9574%;"
      >
      </div>
    </div>
    <label title="200"
           class="_valueLabel_18e6r_71"
    >
      <small>
        200
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueEnd_18e6r_9 _labelTop_18e6r_42"
  >
    <label title="Vulnerability Patch"
           class="_label_18e6r_8"
    >
      Vulnerability Patch
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Vulnerability Patch: 50"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 49.9787%;"
      >
      </div>
    </div>
    <label title="100"
           class="_valueLabel_18e6r_71"
    >
      <small>
        100
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueEnd_18e6r_9 _labelTop_18e6r_42"
  >
    <label title="Critical Failure"
           class="_label_18e6r_8"
    >
      Critical Failure
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Critical Failure: 28"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 27.9881%;"
      >
      </div>
    </div>
    <label title="55"
           class="_valueLabel_18e6r_71"
    >
      <small>
        55
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueEnd_18e6r_9 _labelTop_18e6r_42"
  >
    <label title="Physical Intrusion"
           class="_label_18e6r_8"
    >
      Physical Intrusion
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Physical Intrusion: 3"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 2.99872%;"
      >
      </div>
    </div>
    <label title="5"
           class="_valueLabel_18e6r_71"
    >
      <small>
        5
      </small>
    </label>
  </div>
</section>
`;

exports[`Charts/Bar List/Labels ValueNone smoke-test 1`] = `
<section role="list"
         id="ref-9"
         style="width: 350px;"
>
  <div role="listitem"
       class="_item_18e6r_1 _valueNone_18e6r_65 _labelTop_18e6r_42"
  >
    <label title="Phishing Attempts"
           class="_label_18e6r_8"
    >
      Phishing Attempts
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Phishing Attempts: 100"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 99.9529%;"
      >
      </div>
    </div>
    <label title="100"
           class="_valueLabel_18e6r_71"
    >
      <small>
        100
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueNone_18e6r_65 _labelTop_18e6r_42"
  >
    <label title="Vulnerability Patch"
           class="_label_18e6r_8"
    >
      Vulnerability Patch
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Vulnerability Patch: 50"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 49.9765%;"
      >
      </div>
    </div>
    <label title="50"
           class="_valueLabel_18e6r_71"
    >
      <small>
        50
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueNone_18e6r_65 _labelTop_18e6r_42"
  >
    <label title="Critical Failure"
           class="_label_18e6r_8"
    >
      Critical Failure
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Critical Failure: 25"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 24.9882%;"
      >
      </div>
    </div>
    <label title="25"
           class="_valueLabel_18e6r_71"
    >
      <small>
        25
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueNone_18e6r_65 _labelTop_18e6r_42"
  >
    <label title="Physical Intrusion"
           class="_label_18e6r_8"
    >
      Physical Intrusion
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Physical Intrusion: 5"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 4.99765%;"
      >
      </div>
    </div>
    <label title="5"
           class="_valueLabel_18e6r_71"
    >
      <small>
        5
      </small>
    </label>
  </div>
</section>
`;

exports[`Charts/Bar List/Labels ValueStart smoke-test 1`] = `
<section role="list"
         id="ref-8"
         style="width: 350px;"
>
  <div role="listitem"
       class="_item_18e6r_1 _valueStart_18e6r_36 _labelTop_18e6r_42"
  >
    <label title="Phishing Attempts"
           class="_label_18e6r_8"
    >
      Phishing Attempts
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Phishing Attempts: 100"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 99.9574%;"
      >
      </div>
    </div>
    <label title="100"
           class="_valueLabel_18e6r_71"
    >
      <small>
        100
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueStart_18e6r_36 _labelTop_18e6r_42"
  >
    <label title="Vulnerability Patch"
           class="_label_18e6r_8"
    >
      Vulnerability Patch
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Vulnerability Patch: 50"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 49.9787%;"
      >
      </div>
    </div>
    <label title="50"
           class="_valueLabel_18e6r_71"
    >
      <small>
        50
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueStart_18e6r_36 _labelTop_18e6r_42"
  >
    <label title="Critical Failure"
           class="_label_18e6r_8"
    >
      Critical Failure
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Critical Failure: 25"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 24.9894%;"
      >
      </div>
    </div>
    <label title="25"
           class="_valueLabel_18e6r_71"
    >
      <small>
        25
      </small>
    </label>
  </div>
  <div role="listitem"
       class="_item_18e6r_1 _valueStart_18e6r_36 _labelTop_18e6r_42"
  >
    <label title="Physical Intrusion"
           class="_label_18e6r_8"
    >
      Physical Intrusion
    </label>
    <div class="_outerBar_18e6r_97">
      <div class="_bar_18e6r_105"
           tabindex="0"
           aria-label="Physical Intrusion: 5"
           role="graphics-document"
           style="background: rgb(41, 181, 202); width: 4.99787%;"
      >
      </div>
    </div>
    <label title="5"
           class="_valueLabel_18e6r_71"
    >
      <small>
        5
      </small>
    </label>
  </div>
</section>
`;
